--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
               <div class="blog-card-banner">
                 <img src="assets/images/Binding of isaac.jpeg"
-                  alt="cybersec" width="250"
+                  alt="jogo ruim da disgraça" width="250"
                   class="blog-banner-img">
               </div>
 
@@ -376,13 +376,10 @@
 
                 <button class="blog-topic text-tiny">The Binding of Isaac</button>
 
-                <h3><a href="" class="h3">Cibercrime: ransomware Qilin usa novo método para roubar credenciais no Chrome</a></h3>
+                <h3><a href="" class="h3">QUE JOGO DIFICIL DA PORRA!!</a></h3>
 
                 <p class="blog-text">
-                  O grupo de ransomware Qilin está usando uma nova tática para roubar dados armazenados
-                   no Google Chrome, o que pode marcar uma mudança significativa no mundo do 
-                   cibercrime, segundo a Sophos na quinta-feira (22). 
-                   Pesquisadores da empresa monitoraram a campanha maliciosa ao longo de 18 dias.
+                  Ainda bem que já zerei. 
                 </p>
 
                 <div class="wrapper-flex">
@@ -413,7 +410,7 @@
 
               <div class="blog-card-banner">
                 <img src="assets/images/Darth Vader.jpeg"
-                  alt="Don't Develop Just for Yourself - A Developer's Checklist to Accessibility" width="250"
+                  alt="ssibility" width="250"
                   class="blog-banner-img">
               </div>
 
@@ -421,13 +418,11 @@
 
                 <button class="blog-topic text-tiny">Star Wars</button>
 
-                <h3><a href="" class="h3">Não desenvolva apenas para você - uma lista de verificação de acessibilidade do desenvolvedor</a>
+                <h3><a href="" class="h3">O melhor vilão da história dos cinemas</a>
                 </h3>
 
                 <p class="blog-text">
-                  Nós, como desenvolvedores, tendemos a desenvolver sites inconscientemente para pessoas 
-                  como nós. 
-                  Se não o fizermos ativamente prestar atenção os sites são muit
+                 Simplesmente Vader.
                 </p>
 
                 <div class="wrapper-flex">
@@ -466,12 +461,10 @@
 
                 <button class="blog-topic text-tiny">Limbo</button>
 
-                <h3><a href="" class="h3">Meta planeja lançar versão barata do headset Meta Quest 3, diz analista</a></h3>
+                <h3><a href="" class="h3">Meu primeiro jogo Indie que zerei</a></h3>
 
                 <p class="blog-text">
-                  A Meta desenvolve uma versão mais barata do óculos de realidade virtual Meta Quest 3, 
-                  aponta o jornalista da Bloomberg, Mark Gurman. O novo modelo, chamado Meta Quest 3S, 
-                  deve ser anunciado em setembro deste ano.
+                  Zerei umas 2 vezes, mas não é meu favorito.
                 </p>
 
                 <div class="wrapper-flex">
@@ -509,12 +502,10 @@
 
                 <button class="blog-topic text-tiny">Sifu</button>
 
-                <h3><a href="" class="h3">10 notícias de tecnologia para você começar o da (27/08)</a></h3>
+                <h3><a href="" class="h3">Outro jogo dificil pra porra</a></h3>
 
                 <p class="blog-text">
-                  Bom dia! Separamos as principais notícias do mundo da Ciência e 
-                  Tecnologia para você saber tudo o que aconteceu na última segunda-feira (26). 
-                  Para conferir cada notícia na íntegra, basta clicar nos links a seguir.
+                  Pelo menos é bonito e é muito legal o sistema de combo.
                 </p>
 
                 <div class="wrapper-flex">
@@ -552,15 +543,11 @@
 
                 <button class="blog-topic text-tiny">Castlevania</button>
 
-                <h3><a href="" class="h3">Hacker que roubou 3 bilhões de dados dos EUA foi descoberto e é brasileiro</a>
+                <h3><a href="" class="h3">O melhor e mais lindo jogo 2d do ps1</a>
                 </h3>
 
                 <p class="blog-text">
-                  A principal notícia de cibersegurança nos Estados Unidos em agosto envolve 
-                  o vazamento de 2,7 bilhões de números de segurança social, registro similar ao CPF. 
-                  O grupo cibercriminoso que reivindicou o ataque é o USDoD, conhecido por também 
-                  invadir diversas empresas ao redor do mundo. Agora, 
-                  uma investigação aponta o possível líder do grupo: ele se chama Luan e seria brasileiro.
+                  Gráficos lindos, gameplay insana e trilha sonora perfeita.
                 </p>
 
                 <div class="wrapper-flex">
@@ -599,13 +586,10 @@
 
                 <button class="blog-topic text-tiny">GTA V</Var></Var></button>
 
-                <h3><a href="" class="h3">Como a Wikipédia é atualizada pela comunidade em tempos de ChatGPT?</a></h3>
+                <h3><a href="" class="h3">Um dos protagonistas mais subestimados de GTA</a></h3>
 
                 <p class="blog-text">
-                  Os textos gerados por chatbots de inteligência artificial (IA) não estão cada vez mais 
-                  frequentes só em serviços como blogs e redes sociais. A Wikipédia, mais popular 
-                  enciclopédia da internet, também tem se deparado cada vez mais com textos feitos 
-                  no serviço.
+                  Franklin, apenas.
                 </p>
 
                 <div class="wrapper-flex">
